@@ -32,6 +32,6 @@ typedef void (Engraver:: *Engraver_method) (void);
 
 void engraver_each (SCM list, Engraver_method method);
 
-#endif // ENGRAVERGROUP_HH
+#endif /* ENGRAVERGROUP_HH */
 
 
